--- a/ks-potfolio/src/index.css
+++ b/ks-potfolio/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa&family=Inconsolata&display=swap');
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -12,6 +14,15 @@ code {
     monospace;
 }
 
+.app-back-color {
+  background-color: #212529;
+}
+
+main {
+  padding: 4vw;
+  color: white;
+}
+
 section {
   padding-top: 80px;
 }
@@ -19,3 +30,18 @@ section {
 .navlink {
   margin-right: 40px;
 }
+
+#brand span {
+  font-size: 35px;
+  font-family: 'Comfortaa', cursive;
+}
+
+Nav {
+  font-family: 'Inconsolata', monospace;
+}
+
+.opacity90 {
+  opacity: 0.98;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.8);
+}
+
