--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa&family=Inconsolata&display=swap');
 
+:root {
+  --font-info: 'Calibre', 'Inter', 'San Francisco';
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -12,10 +16,6 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
-
-.app-back-color {
-  background-color: #212529;
 }
 
 main {
@@ -40,13 +40,12 @@ Nav {
   font-family: 'Inconsolata', monospace;
 }
 
-.navOpacity {
+.navOpac {
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.8);
+}
+
+.navColor {
   background-color: rgba(33, 37, 41, 0.98);
 }
 
-.star {
-  height: 750px;
-  background-color: black;
-}
 
